Fixed merge conflicts during rebase with master branch